--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>Scissors Magic</title>
 </head>
 <body>
-<h3>Hello world!</h3>
+    <img src="scissor-magic-logo-200.jpg">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="producten.html">Producten</a></li>
+        <li><a href="salons.html">Salons</a></li>
+        <li><a href="openingstijden.html">Openingstijden</a></li>
+    </ul>
 </body>
 </html>
