--- a/index.html
+++ b/index.html
@@ -12,5 +12,29 @@
         <li><a href="salons.html">Salons</a></li>
         <li><a href="openingstijden.html">Openingstijden</a></li>
     </ul>
+<table border="1">
+    <tr>
+        <td colspan="3"><center><b>Prijzen</b></center></td>
+    </tr>
+    <tr>
+        <td colspan="2">Profesioneel advies</td>
+        <td>Highlights<br>Max. 10 highlights</td>
+    </tr>
+    <tr>
+        <td colspan="3"><center><b>€ 15,00</b></center></td>
+    </tr>
+    <tr>
+        <td colspan="2">Wassen,knippen en drogen</td>
+        <td>Kleurspoeling</td>
+    </tr>
+    <tr>
+        <td colspan="3"><center><b>€ 12,50</b></center></td>
+    </tr>
+    <tr>
+        <td>Modelföhnen</td>
+        <td>Permanente kleuring</td>
+        <td>Balayage</td>
+    </tr>
+</table>
 </body>
 </html>
