--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Scissors Magic</title>
 </head>
 <body>
-    <img src="scissor-magic-logo-200.jpg">
+    <img src="img/scissor-magic-logo-200.jpg">
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="producten.html">Producten</a></li>
@@ -36,5 +36,7 @@
         <td>Balayage</td>
     </tr>
 </table>
+    <p></p>
+<img src="img/NYC_Dyke_March_2013_11_300.jpg"> <img src="img/man-person-black-and-white-people-hair-street-871244-pxhere.com-300.jpg"> <img src="img/bald-man-300.jpg">
 </body>
 </html>
