--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     </tr>
 </table>
     <p></p>
-<img src="img/NYC_Dyke_March_2013_11_300.jpg"> <img src="img/man-person-black-and-white-people-hair-street-871244-pxhere.com-300.jpg"> <img src="img/bald-man-300.jpg">
+    <img src="img/NYC_Dyke_March_2013_11_300.jpg"> <a href="baardenpagina.html"> <img src="img/baardenpagina/man-person-black-and-white-people-hair-street-871244-pxhere.com-300.jpg"></a> <img src="img/bald-man-300.jpg">
 </body>
 </html>
