--- a/producten.html
+++ b/producten.html
@@ -5,12 +5,17 @@
     <title>Scissors Magic</title>
 </head>
 <body>
-    <img src="scissor-magic-logo-200.jpg">
+    <img src="img/scissor-magic-logo-200.jpg">
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="producten.html">Producten</a></li>
         <li><a href="salons.html">Salons</a></li>
         <li><a href="openingstijden.html">Openingstijden</a></li>
     </ul>
+<h1>Revlon</h1>
+<h3>Revlon products corporation. Chicago, Illinois</h3>
+<img src="img/Revlon_logo%20(1).png"><br>
+<img src="img/revlon_01%20(1)-400.jpg"> <img src="img/revlon_02%20(1)-400.jpg"> <img src="img/revlon_03%20(1)-400.jpg">
+<img src="img/revlon_04%20(1)-400.jpg"> <img src="img/revlon_satin_set_02-400.jpg">
 </body>
 </html>
