--- a/salons.html
+++ b/salons.html
@@ -5,12 +5,16 @@
     <title>Scissors Magic</title>
 </head>
 <body>
-    <img src="scissor-magic-logo-200.jpg">
+    <img src="img/baardenpagina/scissor-magic-logo-200.jpg">
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="producten.html">Producten</a></li>
         <li><a href="salons.html">Salons</a></li>
         <li><a href="openingstijden.html">Openingstijden</a></li>
     </ul>
+<br>
+<h1>Onze Salons</h1>
+<img src="img/barbershop1.jpg">
+<img src="img/Schermafbeelding%202017-09-29%20om%2013.00.49.png">
 </body>
 </html>
