--- a/openingstijden.html
+++ b/openingstijden.html
@@ -2,15 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Scissors Magic</title>
+    <title>Scissor Magic</title>
 </head>
 <body>
-    <img src="scissor-magic-logo-200.jpg">
+    <img src="img/baardenpagina/scissor-magic-logo-200.jpg">
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="producten.html">Producten</a></li>
         <li><a href="salons.html">Salons</a></li>
         <li><a href="openingstijden.html">Openingstijden</a></li>
     </ul>
+<table border="1">
+    <tr>
+        <td colspan="9">Openingstijden</td>
+    </tr>
+    <tr>
+        <td colspan="3">Kapsalon Scissor Magic<br>in Huizen</td>
+        <td colspan="3">Kapsalon Scissor Magic<br>in Naarden</td>
+        <td colspan="3">Kapsalon Scissor Magic<br>in Utrecht</td>
+    </tr>
+    <tr>
+        <td>Ma - Vr</td>
+        <td>Za</td>
+        <td>Zo</td>
+        <td>Ma - Vr</td>
+        <td>Za</td>
+        <td>Zo</td>
+        <td>Ma - Vr</td>
+        <td>Za</td>
+        <td>Zo</td>
+    </tr>
+    <tr>
+        <td>09:00 - 12:00</td>
+        <td>09:00 - 12:00</td>
+        <td rowspan="2">Gesloten</td>
+        <td>09:00 - 12:00</td>
+        <td>09:00 - 12:00</td>
+        <td rowspan="2">Gesloten</td>
+        <td>09:00 - 12:00</td>
+        <td>09:00 - 12:00</td>
+        <td rowspan="2">Gesloten</td>
+    </tr>
+    <tr>
+        <td>09:00 - 12:00</td>
+        <td>09:00 - 12:00</td>
+        <td>09:00 - 12:00</td>
+        <td>09:00 - 12:00</td>
+        <td>09:00 - 12:00</td>
+        <td>09:00 - 12:00</td>
+    </tr>
+</table>
 </body>
 </html>
